캐릭터 노드 시스템 업로드
캐릭터 노드 시스템 (PDF업로드)

--- a/pages/page02 sub1.html
+++ b/pages/page02 sub1.html
@@ -23,8 +23,9 @@
 <body>
 
   <body>
-    <iframe title="document" id="sceneFlow" src="/images/halo2_for+plotter.svg" frameborder="0"></iframe>
+    <iframe title="document" id="sceneFlow" src="/contents/Scene Graph_Character Node.pdf" frameborder="0"></iframe>
   </body>
+
 </body>
 
 </html>
