--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <div style="position: fixed; z-index: -1; width: 100%; height: 100%">
       <!-- <iframe width="100%" height="100%" src="https://www.youtube.com/embed/2R6gtTWmihE?loop=1&autoplay=1&mute=1&playlist=2R6gtTWmihE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
-      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/KFEjIEjJS7s?si=iuHHusM1m_S9H57Y&loop=1&autoplay=1&mute=1&playlist=KFEjIEjJS7s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/_BqgJ9nW468?si=SYFRcDs2ipxkWCXv&loop=1&autoplay=1&mute=1&playlist=_BqgJ9nW468" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   </div>
   <div>
       <a href="/pages/mainpage.html">GDCYJ의 문서모음</a>
