--- a/pages/mainpage.html
+++ b/pages/mainpage.html
@@ -131,8 +131,8 @@
     <section class="py-5 text-center container">
       <div class="row py-lg-5">
         <div class="col-lg-6 col-md-8 mx-auto">
-          <h1 class="fw-light">레벨디자인을 꿈꾸는 기획자입니다.</h1>
-          <p class="lead text-muted">아래 작성한 저의 다양한 게임의 레벨디자인을 볼 수 있습니다.</p>
+          <h1 class="fw-light">사람들에게 즐거움을 주는 기획자를 목표로 하는 기획자입니다.</h1>
+          <p class="lead text-muted">아래 작성한 저의 게임디자인문서들 및 데이터 테이블을 볼 수 있습니다.</p>
           <p>
             <a href="https://atentsgame.com/" class="btn btn-primary my-2">나의 시작</a>
             <a href="https://smiling-peridot-aaa.notion.site/92520d0603e54be7a048da3b4c769891?pvs=4" class="btn btn-success my-2">나의 작업</a>
@@ -146,10 +146,10 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
           <div class="col">
             <div class="card shadow-sm" width="100%">
-              <img src="/images/Zelda01.png" class="card-img-top" alt="젤다1">
+              <img src="/images/Grounded-Friends.png" class="card-img-top" alt="그라운디드1">
               <div class="card-body">
-                <h5 class="card-title">레벨디자인1</h5>
-                <p class="card-text">저의 최초의 레벨디자인 문서입니다.</p>
+                <h5 class="card-title">GDD</h5>
+                <p class="card-text">Grounded에 관한 게임디자인문서 입니다.</p>
                 <a href="/pages/page01.html" class="btn btn-warning">문서보기</a>
                 <a href="/pages/page01 sub1.html" class="btn btn-info">씬플로우1</a>
               </div>
@@ -157,36 +157,39 @@
           </div>
           <div class="col">
             <div class="card shadow-sm" width="100%">
-              <img src="/images/Zelda02.jpg" class="card-img-top" alt="젤다2">
+              <img src="/images/Grounded-shroomndoom.png" class="card-img-top" alt="그라운디드2">
               <div class="card-body">
-                <h5 class="card-title">기획서2</h5>
-                <p class="card-text">블라블라~ 기획서2의 내용을 간략하게 적으세요.</p>
-                <a href="/pages/page02.html" class="btn btn-warning">문서보기</a>
+                <h5 class="card-title">UXUI기획서</h5>
+                <p class="card-text">Grounded에 관한 UXUI기획서 입니다.</p>
+                <a href="/pages/page02.html" class="btn btn-warning">UI와이어프레임</a>
                 <a href="/pages/page02 sub1.html" class="btn btn-info">씬플로우2</a>
               </div>
             </div>
           </div>
           <div class="col">
-            <div class="card shadow-sm" width="100%">
-              <img src="/images/Zelda03.jpg" class="card-img-top" alt="젤다3">
+            <div class="card shadow-sm"width="100%">
+              <img src="/images/Grounded_Ladybug.png" class="card-img-top" alt="젤다3">
               <div class="card-body">
-                <h5 class="card-title">기획서3</h5>
-                <p class="card-text">블라블라~ 기획서3의 내용을 간략하게 적으세요.</p>
+                <h5 class="card-title">레벨디자인</h5>
+                <p class="card-text">Grounded 레벨디자인을 작성할 예정입니다. 아직 작성하지 않았습니다.</p>
                 <a href="/pages/page03.html" class="btn btn-warning">문서보기</a>
               </div>
             </div>
-          <!-- </div>
+          
+           </div>
           <div class="col">
             <div class="card shadow-sm" width="100%">
-              <img src="/images/Zelda04.jpg" class="card-img-top" alt="젤다4">
+              <img src="/images/Grounded_Fish.png" class="card-img-top" alt="젤다4">
               <div class="card-body">
-                <h5 class="card-title">기획서4</h5>
-                <p class="card-text">블라블라~ 기획서4의 내용을 간략하게 적으세요.</p>
-                <a href="/pages/page04.html" class="btn btn-success">문서보기</a>
+                <h5 class="card-title">데이터 테이블</h5>
+                <p class="card-text">Grounded에서 필요한 데이터 테이블입니다.</p>
+                <a href="/pages/page04.html" class="btn btn-success">그래픽리소스</a>
+                <a href="/pages/page04 sub1.html" class="btn btn-success">퀘스트</a>
+                <a href="/pages/page04 sub2.html" class="btn btn-success">InputAction</a>
               </div>
             </div>
           </div>
-          <div class="col">
+         <!-- <div class="col">
             <div class="card shadow-sm" width="100%">
               <img src="/images/Zelda05.jpg" class="card-img-top" alt="젤다5">
               <div class="card-body">
