--- a/pages/page02 sub1.html
+++ b/pages/page02 sub1.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>문서이름</title>
+  <title>씬플로우1</title>
   <style>
     #sceneFlow {
       width: 100%;
@@ -23,7 +23,7 @@
 <body>
 
   <body>
-    <iframe title="document" id="sceneFlow" src="/contents/Scene Graph_Character Node.pdf" frameborder="0"></iframe>
+    <iframe title="document" id="sceneFlow" src="/contents/씬플로우.pdf" frameborder="0"></iframe>
   </body>
 
 </body>
