--- a/pages/page04.html
+++ b/pages/page04.html
@@ -23,7 +23,7 @@
 <body>
 
   <body>
-    <iframe title="document" id="myPDF" src="/contents/sample04.pdf" frameborder="0"></iframe>
+    <iframe title="document" id="myPDF" src="/contents/Grounded_그래픽리소스.pdf" frameborder="0"></iframe>
   </body>
 </body>
 
