--- a/pages/mainpage.html
+++ b/pages/mainpage.html
@@ -150,8 +150,7 @@
               <div class="card-body">
                 <h5 class="card-title">GDD</h5>
                 <p class="card-text">Grounded에 관한 게임디자인문서 입니다.</p>
-                <a href="/pages/page01.html" class="btn btn-warning">문서보기</a>
-                <a href="/pages/page01 sub1.html" class="btn btn-info">씬플로우1</a>
+                <a href="/pages/page01.html" class="btn btn-warning">Grounded_GDD</a>
               </div>
             </div>
           </div>
@@ -162,7 +161,7 @@
                 <h5 class="card-title">UXUI기획서</h5>
                 <p class="card-text">Grounded에 관한 UXUI기획서 입니다.</p>
                 <a href="/pages/page02.html" class="btn btn-warning">UI와이어프레임</a>
-                <a href="/pages/page02 sub1.html" class="btn btn-info">씬플로우2</a>
+                <a href="/pages/page02 sub1.html" class="btn btn-info">플로우차트</a>
               </div>
             </div>
           </div>
