--- a/pages/mainpage.html
+++ b/pages/mainpage.html
@@ -196,6 +196,8 @@
                 <p class="card-text">피그마를 이용한 작업입니다.</p>
                 <a href="https://www.figma.com/file/u5RJqhIAesBqMW9rL4H30q/%ED%94%BC%EA%B7%B8%EB%A7%88-%ED%94%8C%EB%A1%9C%EC%9A%B0-%EC%B0%A8%ED%8A%B8?type=whiteboard&node-id=0%3A1&t=dLwndAsQwyVYV3dK-1" class="btn btn-warning">씬플로우</a>
                 <a href="https://www.figma.com/file/jBdV5mBK4JM0XAv4Zq7gAg/%EA%B7%B8%EB%9D%BC%EC%9A%B4%EB%94%94%EB%93%9C-UI%EC%99%80%EC%9D%B4%EC%96%B4%ED%94%84%EB%A0%88%EC%9E%84?type=design&node-id=0%3A1&mode=design&t=Nl11zCecMasBkHUt-1" class="btn btn-success">UI와이어프레임</a>
+                <a href="https://www.figma.com/proto/jBdV5mBK4JM0XAv4Zq7gAg/%EA%B7%B8%EB%9D%BC%EC%9A%B4%EB%94%94%EB%93%9C-UI%EC%99%80%EC%9D%B4%EC%96%B4%ED%94%84%EB%A0%88%EC%9E%84?page-id=0%3A1&type=design&node-id=8-133&viewport=582%2C288%2C0.04&t=rblIYcLfOvB51eHd-1&scaling=contain&starting-point-node-id=8%3A133&mode=design" class="btn btn-success">UI프로토타입</a>
+                
               </div>
             </div>
           </div>
