--- a/pages/mainpage.html
+++ b/pages/mainpage.html
@@ -146,37 +146,39 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
           <div class="col">
             <div class="card shadow-sm" width="100%">
-              <img src="/images/Grounded-Friends.png" class="card-img-top" alt="그라운디드1">
+              <img src="/images/Grounded-Friends.png" class="card-img-top" alt="그라운디드">
               <div class="card-body">
-                <h5 class="card-title">GDD</h5>
-                <p class="card-text">Grounded에 관한 게임디자인문서 입니다.</p>
-                <a href="/pages/page01.html" class="btn btn-warning">Grounded_GDD</a>
+                <h5 class="card-title">그라운디드 역기획서</h5>
+                <p class="card-text">Grounded에 대해 역기획한 문서입니다.</p>
+                <a href="/pages/GroundedPage.html" class="btn btn-warning">그라운디드</a>
               </div>
             </div>
           </div>
           <div class="col">
             <div class="card shadow-sm" width="100%">
-              <img src="/images/Grounded-shroomndoom.png" class="card-img-top" alt="그라운디드2">
+              <img src="/images/HollowKnight_Back.png" class="card-img-top" alt="할로우 나이트 TCG게임">
               <div class="card-body">
-                <h5 class="card-title">UXUI기획서</h5>
-                <p class="card-text">Grounded에 관한 UXUI기획서 입니다.</p>
-                <a href="/pages/page02.html" class="btn btn-warning">UI와이어프레임</a>
-                <a href="/pages/page02 sub1.html" class="btn btn-info">플로우차트</a>
+                <h5 class="card-title">할로우나이트 TCG게임 기획</h5>
+                <p class="card-text">할로우나이트 TCG게임에 대해 기획한 문서입니다.</p>
+                <a href="/pages/HollowPage.html" class="btn btn-warning">할로우나이트</a>
               </div>
             </div>
           </div>
           <div class="col">
             <div class="card shadow-sm"width="100%">
-              <img src="/images/Grounded_Ladybug.png" class="card-img-top" alt="젤다3">
+              <img src="/images/Figma.webp" class="card-img-top" alt="젤다3">
               <div class="card-body">
-                <h5 class="card-title">레벨디자인</h5>
-                <p class="card-text">Grounded 레벨디자인을 작성할 예정입니다. 아직 작성하지 않았습니다.</p>
-                <a href="/pages/page03.html" class="btn btn-warning">문서보기</a>
+                <h5 class="card-title">피그마 활용</h5>
+                <p class="card-text">피그마를 이용한 작업입니다.</p>
+                <a href="https://www.figma.com/file/u5RJqhIAesBqMW9rL4H30q/%ED%94%BC%EA%B7%B8%EB%A7%88-%ED%94%8C%EB%A1%9C%EC%9A%B0-%EC%B0%A8%ED%8A%B8?type=whiteboard&node-id=0%3A1&t=dLwndAsQwyVYV3dK-1" class="btn btn-warning">씬플로우</a>
+                <a href="https://www.figma.com/file/jBdV5mBK4JM0XAv4Zq7gAg/%EA%B7%B8%EB%9D%BC%EC%9A%B4%EB%94%94%EB%93%9C-UI%EC%99%80%EC%9D%B4%EC%96%B4%ED%94%84%EB%A0%88%EC%9E%84?type=design&node-id=0%3A1&mode=design&t=Nl11zCecMasBkHUt-1" class="btn btn-success">UI와이어프레임</a>
+                <a href="https://www.figma.com/proto/jBdV5mBK4JM0XAv4Zq7gAg/%EA%B7%B8%EB%9D%BC%EC%9A%B4%EB%94%94%EB%93%9C-UI%EC%99%80%EC%9D%B4%EC%96%B4%ED%94%84%EB%A0%88%EC%9E%84?page-id=0%3A1&type=design&node-id=8-133&viewport=582%2C288%2C0.04&t=rblIYcLfOvB51eHd-1&scaling=contain&starting-point-node-id=8%3A133&mode=design" class="btn btn-success">UI프로토타입</a>
+
               </div>
             </div>
           
            </div>
-          <div class="col">
+          <!--div class="col">
             <div class="card shadow-sm" width="100%">
               <img src="/images/Grounded_Fish.png" class="card-img-top" alt="젤다4">
               <div class="card-body">
@@ -187,8 +189,8 @@
                 <a href="/pages/page04 sub2.html" class="btn btn-success">InputAction</a>
               </div>
             </div>
-          </div>
-         <div class="col">
+          </div-->
+         <!--div class="col">
             <div class="card shadow-sm" width="100%">
               <img src="/images/Figma.webp" class="card-img-top" alt="figma">
               <div class="card-body">
@@ -200,7 +202,7 @@
                 
               </div>
             </div>
-          </div>
+          </div -->
           <!-- <div class="col">
             <div class="card shadow-sm" width="100%">
               <img src="/images/Zelda06.jpg" class="card-img-top" alt="젤다6">
