--- a/pages/mainpage.html
+++ b/pages/mainpage.html
@@ -146,21 +146,21 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
           <div class="col">
             <div class="card shadow-sm" width="100%">
-              <img src="/images/Grounded-Friends.png" class="card-img-top" alt="그라운디드">
+              <img src="/images/HollowKnight_Back.png" class="card-img-top" alt="할로우나이트">
               <div class="card-body">
-                <h5 class="card-title">그라운디드 역기획서</h5>
-                <p class="card-text">Grounded에 대해 역기획한 문서입니다.</p>
-                <a href="/pages/GroundedPage.html" class="btn btn-warning">그라운디드</a>
+                <h5 class="card-title">할로우나이트 TCG게임 기획</h5>
+                <p class="card-text">할로우나이트 TCG게임에 대해 기획한 문서입니다.</p>
+                <a href="/pages/HollowPage.html" class="btn btn-warning">할로우나이트</a>
               </div>
             </div>
           </div>
           <div class="col">
             <div class="card shadow-sm" width="100%">
-              <img src="/images/HollowKnight_Back.png" class="card-img-top" alt="할로우 나이트 TCG게임">
+              <img src="/images/Grounded-Friends.png" class="card-img-top" alt="그라운디드">
               <div class="card-body">
-                <h5 class="card-title">할로우나이트 TCG게임 기획</h5>
-                <p class="card-text">할로우나이트 TCG게임에 대해 기획한 문서입니다.</p>
-                <a href="/pages/HollowPage.html" class="btn btn-warning">할로우나이트</a>
+                <h5 class="card-title">그라운디드 역기획서</h5>
+                <p class="card-text">Grounded에 대해 역기획한 문서입니다.</p>
+                <a href="/pages/GroundedPage.html" class="btn btn-warning">그라운디드</a>
               </div>
             </div>
           </div>
