--- a/pages/GroundedPage.html
+++ b/pages/GroundedPage.html
@@ -132,7 +132,7 @@
       <div class="row py-lg-5">
         <div class="col-lg-6 col-md-8 mx-auto">
           <h1 class="fw-light">사람들에게 즐거움을 주는 기획자를 목표로 하는 기획자입니다.</h1>
-          <p class="lead text-muted">아래 작성한 저의 게임디자인문서들 및 데이터 테이블을 볼 수 있습니다.</p>
+          <p class="lead text-muted">아래에서 제가 작성한 그라운디드 역기획 문서를 볼 수 있습니다.</p>
           <p>
             <a href="https://atentsgame.com/" class="btn btn-primary my-2">나의 시작</a>
             <a href="https://smiling-peridot-aaa.notion.site/92520d0603e54be7a048da3b4c769891?pvs=4" class="btn btn-success my-2">나의 작업</a>
