--- a/pages/HollowPage.html
+++ b/pages/HollowPage.html
@@ -151,7 +151,7 @@
               <div class="card-body">
                 <h5 class="card-title">레벨 컨셉</h5>
                 <p class="card-text">할로우나이트 TCG게임의 레벨 컨셉 문서입니다.</p>
-                <a href="/pages/page07레벨컨셉.html" class="btn btn-warning">레벨 컨셉</a>
+                <a href="/pages/레벨컨셉.html" class="btn btn-warning">레벨 컨셉</a>
               </div>
             </div>
           </div>
@@ -161,7 +161,7 @@
               <div class="card-body">
                 <h5 class="card-title">레벨 디자인</h5>
                 <p class="card-text">할로우나이트 TCG게임의 레벨 디자인 문서입니다.</p>
-                <a href="/pages/page02.html" class="btn btn-warning">레벨 디자인</a>
+                <a href="/pages/레벨디자인.html" class="btn btn-warning">레벨 디자인</a>
               </div>
             </div>
           </div>
@@ -173,7 +173,7 @@
                 <p class="card-text">할로우나이트 TCG게임의 데이터 테이블 입니다.</p>
                 <a href="/pages/카드 배경 리소스.html" class="btn btn-warning">카드 배경 리소스</a>
                 <a href="/pages/카드 보드 리소스.html" class="btn btn-warning">카드 보드 리소스</a>
-                <a href="/pages/카드 스텟 리소스 미완.html" class="btn btn-warning">카드 스텟 리소스 미완</a>
+                <!--a href="/pages/카드 스텟 리소스 미완.html" class="btn btn-warning">카드 스텟 리소스 미완</a-->
                 <a href="/pages/카드 이름 리소스.html" class="btn btn-warning">카드 이름 리소스</a>
               </div>
             </div>
