--- a/pages/카드 보드 리소스.html
+++ b/pages/카드 보드 리소스.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>문서이름</title>
+  <title>할로우나이트 어드벤처 TCG 게임 카드 보드 리소스</title>
   <style>
     #myPDF {
       width: 100%;
