--- a/pages/레벨디자인.html
+++ b/pages/레벨디자인.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>할로우나이트 어드벤처 TCG 게임 카드 배경 리소스</title>
+  <title>할로우나이트 어드벤처 TCG 레벨디자인 미완</title>
   <style>
     #myPDF {
       width: 100%;
@@ -23,7 +23,7 @@
 <body>
 
   <body>
-    <iframe title="document" id="myPDF" src="/contents/카드 배경 리소스.pdf" frameborder="0"></iframe>
+    <iframe title="document" id="myPDF" src="/contents/할로우나이트 TCG 레벨디자인.pdf" frameborder="0"></iframe>
   </body>
 </body>
 
