--- a/pages/GroundedPage.html
+++ b/pages/GroundedPage.html
@@ -145,7 +145,7 @@
     <div class="album py-5 bg-primary">
       <div class="container">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-          <div class="col">
+          <!--div class="col">
             <div class="card shadow-sm" width="100%">
               <img src="/images/Grounded-Friends.png" class="card-img-top" alt="그라운디드1">
               <div class="card-body">
@@ -154,7 +154,7 @@
                 <a href="/pages/page01.html" class="btn btn-warning">Grounded_GDD</a>
               </div>
             </div>
-          </div>
+          </div-->
           <div class="col">
             <div class="card shadow-sm" width="100%">
               <img src="/images/Grounded-shroomndoom.png" class="card-img-top" alt="그라운디드2">
@@ -165,7 +165,8 @@
                 <a href="/pages/page02 sub1.html" class="btn btn-info">플로우차트</a>
               </div>
             </div>
-          </div>
+
+          <!--/div>
           <div class="col">
             <div class="card shadow-sm"width="100%">
               <img src="/images/Grounded_Ladybug.png" class="card-img-top" alt="젤다3">
@@ -173,7 +174,7 @@
                 <h5 class="card-title">레벨디자인</h5>
                 <p class="card-text">Grounded 레벨디자인을 작성할 예정입니다. 아직 작성하지 않았습니다.</p>
               </div>
-            </div>
+            </div-->
           
            </div>
           <div class="col">
