--- a/pages/HollowPage.html
+++ b/pages/HollowPage.html
@@ -149,9 +149,9 @@
             <div class="card shadow-sm" width="100%">
               <img src="/images/할로우나이트 배경1.png" class="card-img-top" alt="할로우나이트 TCG게임1">
               <div class="card-body">
-                <h5 class="card-title">레벨 컨셉</h5>
-                <p class="card-text">할로우나이트 TCG게임의 레벨 컨셉 문서입니다.</p>
-                <a href="/pages/레벨컨셉.html" class="btn btn-warning">레벨 컨셉</a>
+                <h5 class="card-title">Pitch문서</h5>
+                <p class="card-text">할로우나이트 TCG게임의 Pitch 문서입니다.</p>
+                <a href="/pages/할로우나이트pitch.html" class="btn btn-warning">Pitch문서</a>
               </div>
             </div>
           </div>
@@ -159,9 +159,9 @@
             <div class="card shadow-sm" width="100%">
               <img src="/images/할로우나이트 배경2.png" class="card-img-top" alt="할로우나이트 TCG게임2">
               <div class="card-body">
-                <h5 class="card-title">레벨 디자인</h5>
-                <p class="card-text">할로우나이트 TCG게임의 레벨 디자인 문서입니다.</p>
-                <a href="/pages/레벨디자인.html" class="btn btn-warning">레벨 디자인</a>
+                <h5 class="card-title">레벨 컨셉</h5>
+                <p class="card-text">할로우나이트 TCG게임의 레벨 컨셉 문서입니다.</p>
+                <a href="/pages/레벨컨셉.html" class="btn btn-warning">레벨 컨셉</a>
               </div>
             </div>
           </div>
@@ -171,10 +171,9 @@
               <div class="card-body">
                 <h5 class="card-title">데이터 테이블</h5>
                 <p class="card-text">할로우나이트 TCG게임의 데이터 테이블 입니다.</p>
-                <a href="/pages/카드 배경 리소스.html" class="btn btn-warning">카드 배경 리소스</a>
-                <a href="/pages/카드 보드 리소스.html" class="btn btn-warning">카드 보드 리소스</a>
-                <!--a href="/pages/카드 스텟 리소스 미완.html" class="btn btn-warning">카드 스텟 리소스 미완</a-->
-                <a href="/pages/카드 이름 리소스.html" class="btn btn-warning">카드 이름 리소스</a>
+                <a href="https://drive.google.com/drive/u/0/folders/1CU8MB2teNgzJml4qDOD9yqORca1FyJz6" class="btn btn-warning">카드 관련 테이블</a>
+                <a href="https://drive.google.com/drive/u/0/folders/1yHUBQjlXD95j6hnVfyv0Ugib8RHpc9K3" class="btn btn-warning">아이템 관련 테이블</a>
+  
               </div>
             </div>
           
