--- a/pages/HollowPage.html
+++ b/pages/HollowPage.html
@@ -149,9 +149,10 @@
             <div class="card shadow-sm" width="100%">
               <img src="/images/할로우나이트 배경1.png" class="card-img-top" alt="할로우나이트 TCG게임1">
               <div class="card-body">
-                <h5 class="card-title">Pitch문서</h5>
-                <p class="card-text">할로우나이트 TCG게임의 Pitch 문서입니다.</p>
-                <a href="/pages/할로우나이트pitch.html" class="btn btn-warning">Pitch문서</a>
+                <h5 class="card-title">Pitch, GDD문서</h5>
+                <p class="card-text">For the Hallownest의 Pitch, GDD 문서입니다.</p>
+                <a href="/pages/For the Hallownest Pitch.html" class="btn btn-warning">Pitch</a>
+                <a href="/pages/For the Hallownest GDD.html" class="btn btn-warning">GDD</a>
               </div>
             </div>
           </div>
@@ -159,9 +160,9 @@
             <div class="card shadow-sm" width="100%">
               <img src="/images/할로우나이트 배경2.png" class="card-img-top" alt="할로우나이트 TCG게임2">
               <div class="card-body">
-                <h5 class="card-title">레벨 컨셉</h5>
-                <p class="card-text">할로우나이트 TCG게임의 레벨 컨셉 문서입니다.</p>
-                <a href="/pages/레벨컨셉.html" class="btn btn-warning">레벨 컨셉</a>
+                <h5 class="card-title">Level Concept</h5>
+                <p class="card-text">For the Hallownest의 Level Concept문서입니다.</p>
+                <a href="/pages/For the Hallownest Level_Concept.html" class="btn btn-warning">Level_Concpet</a>
               </div>
             </div>
           </div>
@@ -169,8 +170,8 @@
             <div class="card shadow-sm"width="100%">
               <img src="/images/할로우나이트 배경3.png" class="card-img-top" alt="할로우나이트 TCG게임3">
               <div class="card-body">
-                <h5 class="card-title">데이터 테이블</h5>
-                <p class="card-text">할로우나이트 TCG게임의 데이터 테이블 입니다.</p>
+                <h5 class="card-title">Data_Table</h5>
+                <p class="card-text">For the Hallownest의 Data_Table 입니다.</p>
                 <a href="https://drive.google.com/drive/u/0/folders/1CU8MB2teNgzJml4qDOD9yqORca1FyJz6" class="btn btn-warning">카드 관련 테이블</a>
                 <a href="https://drive.google.com/drive/u/0/folders/1yHUBQjlXD95j6hnVfyv0Ugib8RHpc9K3" class="btn btn-warning">아이템 관련 테이블</a>
   
