--- a/pages/HollowPage.html
+++ b/pages/HollowPage.html
@@ -147,28 +147,47 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
           <div class="col">
             <div class="card shadow-sm" width="100%">
-              <img src="/images/할로우나이트 배경1.png" class="card-img-top" alt="할로우나이트 TCG게임1">
+              <img src="/images/할로우나이트 배경1.png" , class="card-img-top" alt="For the Hallownest1">
               <div class="card-body">
-                <h5 class="card-title">Pitch, GDD문서</h5>
-                <p class="card-text">For the Hallownest의 Pitch, GDD 문서입니다.</p>
-                <a href="/pages/For the Hallownest Pitch.html" class="btn btn-warning">Pitch</a>
-                <a href="/pages/For the Hallownest GDD.html" class="btn btn-warning">GDD</a>
+                <h5 class="card-title" style="text-align:center">GDD</h5>
+                <p class="card-text" style="text-align:left"></p>Pitch 문서입니다.</p>
+                <a href="/contents/For the Hallownest Pitch.pdf" class="btn btn-info" style="float:center;">Pitch</a>
+                <p class="card-text" style="text-align:left"></p>GDD 문서입니다.</p>
+                <a href="/contents/For the Hallownest GDD.pdf" class="btn btn-primary" style="float:center;">GDD</a>
+                <p class="card-text" style="text-align:left"></p>카드에 대한 데이터 테이블 입니다.</p>
+                <a href="/contents/DataTable/Card/For the Hallownest Card BackGround Resource Table.pdf" class="btn btn-outline-info" style="float:center;">카드 배경 리소스 테이블</a>
+                <a href="/contents/DataTable/Card/For the Hallownest Card Effect Animation Table.pdf" class="btn btn-outline-info" style="float:center;">카드 효과 애니메이션 테이블</a>
+                <a href="/contents/DataTable/Card/For the Hallownest Card Image Table.pdf" class="btn btn-outline-info" style="float:center;">카드 이미지 리소스 테이블</a>
+                <a href="/contents/DataTable/Card/For the Hallownest Card Status Table.pdf" class="btn btn-outline-info" style="float:center;">카드 스텟 테이블</a>
+                <a href="/contents/DataTable/Card/For the Hallownest Card String Table.pdf" class="btn btn-outline-info" style="float:center;">카드 스트링 테이블</a>
+                <p class="card-text" style="text-align:left"></p>아이템에 대한 데이터 테이블 입니다.</p>
+                <a href="/contents/DataTable/Item/For the Hallownest Item Affect Table.pdf" class="btn btn-outline-success" style="float:center;">아이템 효과 테이블</a>
+                <a href="/contents/DataTable/Item/For the Hallownest Item Image Resourse.pdf" class="btn btn-outline-success" style="float:center;">아이템 이미지 리소스 테이블</a>
+                <a href="/contents/DataTable/Item/For the Hallownest Item String Table.pdf" class="btn btn-outline-success" style="float:center;">아이템 스트링 테이블</a>
+                <p class="card-text" style="text-align:left"></p>전투 프로세스에 대한 데이터 테이블 입니다.</p>
+                <a href="/contents/DataTable/Process/For the Hallownest Exploration Boss Parameter String Table.pdf" class="btn btn-outline-dark"style="float:center;">보스 파라미터 스트링 테이블</a>
+                <a href="/contents/DataTable/Process/For the Hallownest Exploration Boss Parameter Table.pdf" class="btn btn-outline-dark"style="float:center;">보스 파라미터 테이블</a>
+                <a href="/contents/DataTable/Process/For the Hallownest Exploration Mob AI.pdf" class="btn btn-outline-dark"style="float:center;">탐험 몹 AI패턴</a>
               </div>
             </div>
           </div>
+
           <div class="col">
             <div class="card shadow-sm" width="100%">
-              <img src="/images/할로우나이트 배경2.png" class="card-img-top" alt="할로우나이트 TCG게임2">
+              <img src="/images/할로우나이트 배경2.png" class="card-img-top" alt="For the Hallownest2">
               <div class="card-body">
-                <h5 class="card-title">Level Concept</h5>
-                <p class="card-text">For the Hallownest의 Level Concept문서입니다.</p>
-                <a href="/pages/For the Hallownest Level_Concept.html" class="btn btn-warning">Level_Concpet</a>
+                <h5 class="card-title" style="text-align:center">Level Concept</h5>
+                <p class="card-text" style="text-align:left"></p>Level Concept 문서입니다.</p>
+                <a href="/contents/For the Hallownest Level_Concept.pdf" class="btn btn-info" style="float:center;">Level Concept</a>
+                <p class="card-text" style="text-align:left"></p>게임 보드에 대한 데이터 테이블입니다.</p>
+                <a href="/contents/DataTable/Concept/For the Hallownest Game Board Resource.pdf" class="btn btn-outline-dark" style="float:center;">게임 보드 리소스 데이터 테이블</a>
               </div>
             </div>
           </div>
+<!-- 
           <div class="col">
             <div class="card shadow-sm"width="100%">
-              <img src="/images/할로우나이트 배경3.png" class="card-img-top" alt="할로우나이트 TCG게임3">
+              <img src="/images/할로우나이트 배경3.png" width="200", height="250",class="card-img-top" alt="할로우나이트 TCG게임3">
               <div class="card-body">
                 <h5 class="card-title">Data_Table</h5>
                 <p class="card-text">For the Hallownest의 Data_Table 입니다.</p>
@@ -177,8 +196,8 @@
   
               </div>
             </div>
-          
            </div>
+            -->
           <!--div class="col">
             <div class="card shadow-sm" width="100%">
               <img src="/images/Grounded_Fish.png" class="card-img-top" alt="젤다4">
