--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       ></iframe>
     </div>
     <div>
-      <a href="/pages/1. Mainpage.html">GDCYJ의 문서모음</a>
+      <a href="/pages/mainpage.html">GDCYJ의 문서모음</a>
     </div>
   </body>
 </html>
