--- a/pages/2. MestiariiPage.html
+++ b/pages/2. MestiariiPage.html
@@ -132,7 +132,7 @@
       <div class="row py-lg-5">
         <div class="col-lg-6 col-md-8 mx-auto">
           <h1 class="fw-light">사람들에게 즐거움을 주는 기획자를 목표로 하는 기획자입니다.</h1>
-          <p class="lead text-muted">아래에서 제가 작성한 할로우나이트 TCG게임 문서를 볼 수 있습니다.</p>
+          <p class="lead text-muted">아래에서 제가 작성한 Mestiarii자료를 볼 수 있습니다.</p>
           <p>
             <a href="https://atentsgame.com/" class="btn btn-primary my-2">나의 시작</a>
             <a href="https://smiling-peridot-aaa.notion.site/92520d0603e54be7a048da3b4c769891?pvs=4" class="btn btn-success my-2">나의 작업</a>
@@ -163,6 +163,8 @@
                 <h5 class="card-title" style="text-align:center">데이터 테이블 및 빌드</h5>
                 <p class="card-text" style="text-align:left"></p>데이터 테이블 모음 링크입니다.</p>
                 <a href="https://drive.google.com/drive/u/0/folders/1NYrOEXXeFV0kG6A_ubCYh9F3nkPwOG9E" class="btn btn-info" style="float:center;">DataTable</a>
+                <p class="card-text" style="text-align:left"></p>UI도안 작업 링크입니다.</p>
+                <a href="https://www.figma.com/design/jBdV5mBK4JM0XAv4Zq7gAg/%EA%B7%B8%EB%9D%BC%EC%9A%B4%EB%94%94%EB%93%9C-UI%EC%99%80%EC%9D%B4%EC%96%B4%ED%94%84%EB%A0%88%EC%9E%84?node-id=5-12" class="btn btn-info" style="float:center;">DataTable</a>
                 <p class="card-text" style="text-align:left"></p>빌드한 게임을 확인 가능한 링크입니다.</p>
                 <a href="https://drive.google.com/drive/u/0/folders/1VEk5vBVDlml4gCZoOkruaKYJ4NGmGip4" class="btn btn-info" style="float:center;">Build</a>
                 
