0613 UI도안 및 GDD수정

--- a/pages/2. MestiariiPage.html
+++ b/pages/2. MestiariiPage.html
@@ -163,8 +163,8 @@
                 <h5 class="card-title" style="text-align:center">데이터 테이블 및 빌드</h5>
                 <p class="card-text" style="text-align:left"></p>데이터 테이블 모음 링크입니다.</p>
                 <a href="https://drive.google.com/drive/u/0/folders/1NYrOEXXeFV0kG6A_ubCYh9F3nkPwOG9E" class="btn btn-info" style="float:center;">DataTable</a>
-                <p class="card-text" style="text-align:left"></p>UI도안 작업 링크입니다.</p>
-                <a href="https://www.figma.com/design/jBdV5mBK4JM0XAv4Zq7gAg/%EA%B7%B8%EB%9D%BC%EC%9A%B4%EB%94%94%EB%93%9C-UI%EC%99%80%EC%9D%B4%EC%96%B4%ED%94%84%EB%A0%88%EC%9E%84?node-id=5-12" class="btn btn-info" style="float:center;">UI</a>
+                <p class="card-text" style="text-align:left"></p>UI도안 입니다.</p>
+                <a href="/images/MestiariiUI도안.PNG" class="btn btn-info" style="float:center;">UI</a>
                 <p class="card-text" style="text-align:left"></p>빌드한 게임을 다운할 수 있는 링크입니다.</p>
                 <a href="https://drive.google.com/drive/u/0/folders/1VEk5vBVDlml4gCZoOkruaKYJ4NGmGip4" class="btn btn-info" style="float:center;">Build</a>
                 <p class="card-text" style="text-align:left"></p>게임플레이영상을 확인 가능한 링크입니다.</p>
