--- a/pages/mainpage.html
+++ b/pages/mainpage.html
@@ -134,8 +134,7 @@
           <h1 class="fw-light">사람들에게 즐거움을 주는 기획자를 목표로 하는 기획자입니다.</h1>
           <p class="lead text-muted">아래 제가 지금까지 작업한 자료들을 보실 수 있습니다.</p>
           <p>
-            <a href="https://atentsgame.com/" class="btn btn-primary my-2">나의 시작</a>
-            <a href="https://smiling-peridot-aaa.notion.site/92520d0603e54be7a048da3b4c769891?pvs=4" class="btn btn-success my-2">나의 작업</a>
+            <a href="https://github.com/YongJinKing" class="btn btn-primary my-2">Github</a>
           </p>
         </div>
       </div>
@@ -159,7 +158,7 @@
               <img src="/images/HollowKnight_Back.png" class="card-img-top" alt="할로우나이트">
               <div class="card-body">
                 <h5 class="card-title">For the Hallownest</h5>
-                <p class="card-text">For the Hallownest에 대해 기획한 부분입니다.</p>
+                <p class="card-text">액션 CCG, RPG게임을 기획한 부분입니다.</p>
                 <a href="/pages/3. HollowPage.html" class="btn btn-warning">For the Hallownest</a>
               </div>
             </div>
