1015 업데이트 테스트

--- a/pages/2. MestiariiPage.html
+++ b/pages/2. MestiariiPage.html
@@ -134,9 +134,8 @@
           <h1 class="fw-light">사람들에게 즐거움을 주는 기획자를 목표로 하는 기획자입니다.</h1>
           <p class="lead text-muted">아래에서 제가 작성한 Mestiarii자료를 볼 수 있습니다.</p>
           <p>
-            <a href="https://atentsgame.com/" class="btn btn-primary my-2">나의 시작</a>
-            <a href="https://smiling-peridot-aaa.notion.site/92520d0603e54be7a048da3b4c769891?pvs=4" class="btn btn-success my-2">나의 작업</a>
-            <a href="/pages/mainpage.html" class="btn btn-success my-2"> 메인 화면 </a>
+            <a href="https://github.com/YongJinKing" class="btn btn-primary my-2">Github</a>
+            <a href="/pages/1. mainpage.html" class="btn btn-success my-2"> 메인 화면 </a>
           </p>
         </div>
       </div>
@@ -149,7 +148,7 @@
             <div class="card shadow-sm" width="100%">
               <img src="/images/Mestiarii배경1.png" , class="card-img-top" alt="For the Hallownest1">
               <div class="card-body">
-                <h5 class="card-title" style="text-align:center">GDD</h5>
+                <h5 class="card-title" style="text-align:center">메인 기획서</h5>
                 <p class="card-text" style="text-align:left"></p>GDD 문서입니다.</p>
                 <a href="/contents/Mestiarii GDD.pdf" class="btn btn-info" style="float:center;">GDD</a>
               </div>
