--- a/pages/3. HollowPage.html
+++ b/pages/3. HollowPage.html
@@ -134,9 +134,8 @@
           <h1 class="fw-light">사람들에게 즐거움을 주는 기획자를 목표로 하는 기획자입니다.</h1>
           <p class="lead text-muted">아래에서 제가 작성한 For the Hallownest 문서를 볼 수 있습니다.</p>
           <p>
-            <a href="https://atentsgame.com/" class="btn btn-primary my-2">나의 시작</a>
-            <a href="https://smiling-peridot-aaa.notion.site/92520d0603e54be7a048da3b4c769891?pvs=4" class="btn btn-success my-2">나의 작업</a>
-            <a href="/pages/mainpage.html" class="btn btn-success my-2"> 메인 화면 </a>
+            <a href="https://github.com/YongJinKing" class="btn btn-primary my-2">Github</a>
+            <a href="/pages/1. mainpage.html" class="btn btn-success my-2"> 메인 화면 </a>
           </p>
         </div>
       </div>
@@ -149,7 +148,7 @@
             <div class="card shadow-sm" width="100%">
               <img src="/images/할로우나이트 배경1.png" , class="card-img-top" alt="For the Hallownest1">
               <div class="card-body">
-                <h5 class="card-title" style="text-align:center">GDD</h5>
+                <h5 class="card-title" style="text-align:center">메인 기획서</h5>
                 <p class="card-text" style="text-align:left"></p>Pitch 문서입니다.</p>
                 <a href="/contents/For the Hallownest Pitch.pdf" class="btn btn-info" style="float:center;">Pitch</a>
                 <p class="card-text" style="text-align:left"></p>GDD 문서입니다.</p>
@@ -184,18 +183,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
-            <div class="card shadow-sm"width="100%">
-              <img src="/images/Figma.webp" class="card-img-top" alt="젤다3">
-              <div class="card-body">
-                <h5 class="card-title">피그마 활용</h5>
-                <p class="card-text">피그마를 이용한 작업입니다.</p>
-                <a href="https://www.figma.com/file/u5RJqhIAesBqMW9rL4H30q/%ED%94%BC%EA%B7%B8%EB%A7%88-%ED%94%8C%EB%A1%9C%EC%9A%B0-%EC%B0%A8%ED%8A%B8?type=whiteboard&node-id=0%3A1&t=dLwndAsQwyVYV3dK-1" class="btn btn-warning">플로우작성모음</a>
-                <a href="https://www.figma.com/file/jBdV5mBK4JM0XAv4Zq7gAg/%EA%B7%B8%EB%9D%BC%EC%9A%B4%EB%94%94%EB%93%9C-UI%EC%99%80%EC%9D%B4%EC%96%B4%ED%94%84%EB%A0%88%EC%9E%84?type=design&node-id=0%3A1&mode=design&t=Nl11zCecMasBkHUt-1" class="btn btn-success">UI와이어프레임</a>
-                <a href="https://www.figma.com/file/4Yx7cisqAJFNg7fLoSsZvh/HollowTCG?type=design&node-id=0%3A1&mode=design&t=iL4HYXonJ7rKO5Du-1" class="btn btn-success">레퍼런스 이미지 작업</a>
-              </div>
-            </div>
-           </div>
+          
 <!-- 
           <div class="col">
             <div class="card shadow-sm"width="100%">
