1015홈페이지 업데이트

--- a/pages/1. mainpage.html
+++ b/pages/1. mainpage.html
@@ -175,18 +175,17 @@
             </div>
           </div>
           
-          <!--div class="col">
+          <div class="col">
             <div class="card shadow-sm" width="100%">
-              <img src="/images/Grounded_Fish.png" class="card-img-top" alt="젤다4">
+              <img src="/images/totalImage/다양한요소.png" class="card-img-top" alt="젤다4">
               <div class="card-body">
-                <h5 class="card-title">데이터 테이블</h5>
-                <p class="card-text">Grounded에서 필요한 데이터 테이블입니다.</p>
-                <a href="/pages/page04.html" class="btn btn-success">그래픽리소스</a>
-                <a href="/pages/page04 sub1.html" class="btn btn-success">퀘스트</a>
-                <a href="/pages/page04 sub2.html" class="btn btn-success">InputAction</a>
+                <h5 class="card-title">기타 개발</h5>
+                <p class="card-text">유니티 학습을 위해 따로 개발한 부분입니다.</p>
+                <a href="/pages/4.DevelopPage.html" class="btn btn-success">기타자료</a>
+                
               </div>
             </div>
-          </div-->
+          </div>
          <!--div class="col">
             <div class="card shadow-sm" width="100%">
               <img src="/images/Figma.webp" class="card-img-top" alt="figma">
