--- a/pages/2. MestiariiPage.html
+++ b/pages/2. MestiariiPage.html
@@ -131,7 +131,7 @@
     <section class="py-5 text-center container">
       <div class="row py-lg-5">
         <div class="col-lg-6 col-md-8 mx-auto">
-          <h1 class="fw-light">사람들에게 즐거움을 주는 기획자를 목표로 하는 기획자입니다.</h1>
+          <h1 class="fw-light">사Mestiarii기획 및 개발자료</h1>
           <p class="lead text-muted">아래에서 제가 작성한 Mestiarii자료를 볼 수 있습니다.</p>
           <p>
             <a href="https://github.com/YongJinKing" class="btn btn-primary my-2">Github</a>
@@ -146,7 +146,7 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
           <div class="col">
             <div class="card shadow-sm" width="100%">
-              <img src="/images/Mestiarii배경1.png" , class="card-img-top" alt="For the Hallownest1">
+              <img src="/images/totalImage/Management.png" , class="card-img-top" alt="For the Hallownest1">
               <div class="card-body">
                 <h5 class="card-title" style="text-align:center">메인 기획서</h5>
                 <p class="card-text" style="text-align:left"></p>GDD 문서입니다.</p>
@@ -157,35 +157,30 @@
 
           <div class="col">
             <div class="card shadow-sm" width="100%">
-              <img src="/images/Mestiarii배경2.png" class="card-img-top" alt="For the Hallownest2">
+              <img src="/images/totalImage/Data.png" class="card-img-top" alt="For the Hallownest2">
               <div class="card-body">
                 <h5 class="card-title" style="text-align:center">데이터 테이블 및 빌드</h5>
                 <p class="card-text" style="text-align:left"></p>데이터 테이블 모음 링크입니다.</p>
                 <a href="https://drive.google.com/drive/u/0/folders/1NYrOEXXeFV0kG6A_ubCYh9F3nkPwOG9E" class="btn btn-info" style="float:center;">DataTable</a>
-                <p class="card-text" style="text-align:left"></p>UI도안 입니다.</p>
-                <a href="/images/MestiariiUI도안.PNG" class="btn btn-info" style="float:center;">UI</a>
-                <p class="card-text" style="text-align:left"></p>빌드한 게임을 다운할 수 있는 링크입니다.</p>
-                <a href="https://drive.google.com/drive/u/0/folders/1VEk5vBVDlml4gCZoOkruaKYJ4NGmGip4" class="btn btn-info" style="float:center;">Build</a>
-                <p class="card-text" style="text-align:left"></p>게임플레이영상을 확인 가능한 링크입니다.</p>
-                <a href="https://youtu.be/QuUzS3wF80w" class="btn btn-info" style="float:center;">Play영상</a>
-                
               </div>
             </div>
           </div>
-<!-- 
+
           <div class="col">
             <div class="card shadow-sm"width="100%">
-              <img src="/images/할로우나이트 배경3.png" width="200", height="250",class="card-img-top" alt="할로우나이트 TCG게임3">
+              <img src="/images/totalImage/Game.png" class="card-img-top" alt="For the Hallownest2">
               <div class="card-body">
-                <h5 class="card-title">Data_Table</h5>
-                <p class="card-text">For the Hallownest의 Data_Table 입니다.</p>
-                <a href="https://drive.google.com/drive/u/0/folders/1CU8MB2teNgzJml4qDOD9yqORca1FyJz6" class="btn btn-warning">카드 관련 테이블</a>
-                <a href="https://drive.google.com/drive/u/0/folders/1yHUBQjlXD95j6hnVfyv0Ugib8RHpc9K3" class="btn btn-warning">아이템 관련 테이블</a>
+                <h5 class="card-title">게임 소개 및 빌드 파일</h5>
+                <p class="card-text" style="text-align:left"></p>게임플레이영상을 확인 가능한 링크입니다.</p>
+                <a href="https://youtu.be/QuUzS3wF80w" class="btn btn-info" style="float:center;">Play영상</a>
+                <p class="card-text" style="text-align:left"></p>빌드한 게임을 다운할 수 있는 링크입니다.</p>
+                <a href="https://drive.google.com/drive/u/0/folders/1VEk5vBVDlml4gCZoOkruaKYJ4NGmGip4" class="btn btn-info" style="float:center;">Build</a>
+                
   
               </div>
             </div>
            </div>
-            -->
+  
           <!--div class="col">
             <div class="card shadow-sm" width="100%">
               <img src="/images/Grounded_Fish.png" class="card-img-top" alt="젤다4">
