--- a/pages/4.DevelopPage.html
+++ b/pages/4.DevelopPage.html
@@ -131,8 +131,8 @@
     <section class="py-5 text-center container">
       <div class="row py-lg-5">
         <div class="col-lg-6 col-md-8 mx-auto">
-          <h1 class="fw-light">For The Hallownest기획 자료</h1>
-          <p class="lead text-muted">아래에서 제가 작성한 For the Hallownest 문서를 볼 수 있습니다.</p>
+          <h1 class="fw-light">개발 관련 자료</h1>
+          <p class="lead text-muted">아래에서 제가 개발한 게임을 볼 수 있습니다.</p>
           <p>
             <a href="https://github.com/YongJinKing" class="btn btn-primary my-2">Github</a>
             <a href="/pages/1. mainpage.html" class="btn btn-success my-2"> 메인 화면 </a>
@@ -146,40 +146,27 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
           <div class="col">
             <div class="card shadow-sm" width="100%">
-              <img src="/images/할로우나이트 배경1.png" , class="card-img-top" alt="For the Hallownest1">
+              <img src="/images/Develop/KitchenKhaos.jpg" , class="card-img-top" alt="For the Hallownest1">
               <div class="card-body">
-                <h5 class="card-title" style="text-align:center">메인 기획서</h5>
-                <p class="card-text" style="text-align:left"></p>Pitch 문서입니다.</p>
-                <a href="/contents/For the Hallownest Pitch.pdf" class="btn btn-info" style="float:center;">Pitch</a>
-                <p class="card-text" style="text-align:left"></p>GDD 문서입니다.</p>
-                <a href="/contents/For the Hallownest GDD.pdf" class="btn btn-primary" style="float:center;">GDD</a>
-                <p class="card-text" style="text-align:left"></p>카드에 대한 데이터 테이블 입니다.</p>
-                <a href="/contents/DataTable/Card/For the Hallownest Card BackGround Resource Table.pdf" class="btn btn-outline-info" style="float:center;">카드 배경 리소스 테이블</a>
-                <a href="/contents/DataTable/Card/For the Hallownest Card Effect Animation Table.pdf" class="btn btn-outline-info" style="float:center;">카드 효과 애니메이션 테이블</a>
-                <a href="/contents/DataTable/Card/For the Hallownest Card Image Table.pdf" class="btn btn-outline-info" style="float:center;">카드 이미지 리소스 테이블</a>
-                <a href="/contents/DataTable/Card/For the Hallownest Card Status Table.pdf" class="btn btn-outline-info" style="float:center;">카드 스텟 테이블</a>
-                <a href="/contents/DataTable/Card/For the Hallownest Card String Table.pdf" class="btn btn-outline-info" style="float:center;">카드 스트링 테이블</a>
-                <p class="card-text" style="text-align:left"></p>아이템에 대한 데이터 테이블 입니다.</p>
-                <a href="/contents/DataTable/Item/For the Hallownest Item Affect Table.pdf" class="btn btn-outline-success" style="float:center;">아이템 효과 테이블</a>
-                <a href="/contents/DataTable/Item/For the Hallownest Item Image Resourse.pdf" class="btn btn-outline-success" style="float:center;">아이템 이미지 리소스 테이블</a>
-                <a href="/contents/DataTable/Item/For the Hallownest Item String Table.pdf" class="btn btn-outline-success" style="float:center;">아이템 스트링 테이블</a>
-                <p class="card-text" style="text-align:left"></p>전투 프로세스에 대한 데이터 테이블 입니다.</p>
-                <a href="/contents/DataTable/Process/For the Hallownest Exploration Boss Parameter String Table.pdf" class="btn btn-outline-dark"style="float:center;">보스 파라미터 스트링 테이블</a>
-                <a href="/contents/DataTable/Process/For the Hallownest Exploration Boss Parameter Table.pdf" class="btn btn-outline-dark"style="float:center;">보스 파라미터 테이블</a>
-                <a href="/contents/DataTable/Process/For the Hallownest Exploration Mob AI.pdf" class="btn btn-outline-dark"style="float:center;">탐험 몹 AI패턴</a>
+                <h5 class="card-title" style="text-align:center">KitchenKhaos</h5>
+                <p class="card-text" style="text-align:left"></p>KitchenKhaos를 리팩토링한 부분입니다.</p>
+                <a href="https://github.com/YongJinKing/OverCookClone" class="btn btn-info" style="float:center;">깃허브 주소</a>
+                <p class="card-text" style="text-align:left"></p>KitchenKhaos를 리팩토링한 부분과 개발하면서 배운것에 대해 간단하게 정리한 부분입니다.</p>
+                <a href="/contents/Develop/KitchenKhaos 시스템 정리.txt" class="btn btn-info" style="float:center;">깃허브 주소</a>
+                
               </div>
             </div>
           </div>
 
           <div class="col">
             <div class="card shadow-sm" width="100%">
-              <img src="/images/할로우나이트 배경2.png" class="card-img-top" alt="For the Hallownest2">
+              <img src="/images/Develop/Defence.png" class="card-img-top" alt="For the Hallownest2">
               <div class="card-body">
                 <h5 class="card-title" style="text-align:center">Level Concept</h5>
-                <p class="card-text" style="text-align:left"></p>Level Concept 문서입니다.</p>
-                <a href="/contents/For the Hallownest Level_Concept.pdf" class="btn btn-info" style="float:center;">Level Concept</a>
-                <p class="card-text" style="text-align:left"></p>게임 보드에 대한 데이터 테이블입니다.</p>
-                <a href="/contents/DataTable/Concept/For the Hallownest Game Board Resource.pdf" class="btn btn-outline-dark" style="float:center;">게임 보드 리소스 데이터 테이블</a>
+                <p class="card-text" style="text-align:left"></p>MBC아카데미에서 배운 디팬스 게임입니다.</p>
+                <a href="https://github.com/YongJinKing/DefenceGameInMBC" class="btn btn-info" style="float:center;">깃허브 주소</a>
+                <!-- <p class="card-text" style="text-align:left"></p>MBC아카데미에서 디팬스 게임을 개발하면서 배운 부분입니다.</p>
+                <a href="/contents/DataTable/Concept/For the Hallownest Game Board Resource.pdf" class="btn btn-outline-dark" style="float:center;">게임 보드 리소스 데이터 테이블</a> -->
               </div>
             </div>
           </div>
