--- a/pages/Pexplorer/PexplorerPage.html
+++ b/pages/Pexplorer/PexplorerPage.html
@@ -131,7 +131,7 @@
     <section class="py-5 text-center container">
       <div class="row py-lg-5">
         <div class="col-lg-6 col-md-8 mx-auto">
-          <h1 class="fw-light">사람들에게 즐거움을 주는 기획자를 목표로 하는 기획자입니다.</h1>
+          <h1 class="fw-light">Pexplorer 기획 및 개발자료</h1>
           <p class="lead text-muted">아래에서 제가 작성한 Pexplorer자료를 볼 수 있습니다.</p>
           <p>
             <a href="https://github.com/YongJinKing" class="btn btn-primary my-2">Github</a>
@@ -150,11 +150,11 @@
               <div class="card-body">
                 <h5 class="card-title" style="text-align:center">메인 기획서</h5>
                 <p class="card-text" style="text-align:left"></p>GDD기획서 입니다.</p>
-                <a href="/contents/Mestiarii GDD.pdf" class="btn btn-info" style="float:center;">GDD</a>
+                <a href="/contents/Pexplorer/Pexplorer GDD.pdf" class="btn btn-info" style="float:center;">GDD</a>
                 <p class="card-text" style="text-align:left"></p>UI기획서 입니다.</p>
-                <a href="/contents/Mestiarii GDD.pdf" class="btn btn-info" style="float:center;">UI</a>
+                <a href="/contents/Pexplorer/Pexplorer UI기획서.pdf" class="btn btn-info" style="float:center;">UI</a>
                 <p class="card-text" style="text-align:left"></p>보스 토끼 패턴 기획서 입니다.</p>
-                <a href="/contents/Mestiarii GDD.pdf" class="btn btn-info" style="float:center;">BossPattern</a>
+                <a href="/contents/Pexplorer/토끼 보스 패턴 구성.pdf" class="btn btn-info" style="float:center;">토끼 보스 패턴</a>
               </div>
             </div>
           </div>
@@ -163,9 +163,13 @@
             <div class="card shadow-sm" width="100%">
               <img src="/images/totalImage/Data.png" class="card-img-top" alt="For the Hallownest2">
               <div class="card-body">
-                <h5 class="card-title" style="text-align:center">데이터 테이블</h5>
+                <h5 class="card-title" style="text-align:center">데이터 및 일정 관리</h5>
                 <p class="card-text" style="text-align:left"></p>데이터 테이블 모음 링크입니다.</p>
-                <a href="https://drive.google.com/drive/u/0/folders/1NYrOEXXeFV0kG6A_ubCYh9F3nkPwOG9E" class="btn btn-info" style="float:center;">DataTable</a>
+                <a href="https://drive.google.com/drive/folders/1Hy5D2mZOMGLQ52kfDfKOtHiQtYLGc1_g?dmr=1&ec=wgc-drive-hero-goto" class="btn btn-info" style="float:center;">JiraLink</a>
+                <p class="card-text" style="text-align:left"></p>Jira초대 링크 입니다. 확인 불가시 아래 이미지확인 부탁드립니다.</p>
+                <a href="https://id.atlassian.com/invite/p/jira-software?id=xsPNz8Z3TuScmiYo9Yunkw" class="btn btn-info" style="float:center;">JiraImage</a>
+                <p class="card-text" style="text-align:left"></p>Jira로 구성한 간략한 일정표입니다.</p>
+                <a href="/contents/Pexplorer/지라일정.PNG" class="btn btn-info" style="float:center;">DataTable</a>
                 
                 
               </div>
@@ -177,13 +181,10 @@
               <img src="/images/totalImage/Game.png" class="card-img-top" alt="For the Hallownest2">
               <div class="card-body">
                 <h5 class="card-title">게임 소개 및 빌드</h5>
-                <p class="card-text">For the Hallownest의 Data_Table 입니다.</p>
-                <a href="https://drive.google.com/drive/u/0/folders/1CU8MB2teNgzJml4qDOD9yqORca1FyJz6" class="btn btn-warning">게임 소개 영상</a>
-                <p class="card-text">For the Hallownest의 Data_Table 입니다.</p>
-                <a href="https://drive.google.com/drive/u/0/folders/1CU8MB2teNgzJml4qDOD9yqORca1FyJz6" class="btn btn-warning">빌드 파일</a>
-                <p class="card-text">For the Hallownest의 Data_Table 입니다.</p>
-                <a href="PexplorerBuildPage.html" class="btn btn-warning">게임 플레이</a>
-  
+                <p class="card-text">게임 소개 영상입니다.</p>
+                <a href="https://www.youtube.com/watch?v=8wCJJDTQBlM&t=188s" class="btn btn-warning">게임 소개 영상</a>
+                <p class="card-text">게임 빌드 파일입니다.</p>
+                <a href="https://drive.google.com/drive/folders/1PMIrqlt9RmufupJtW3oa4hoOH3LffwJ_?dmr=1&ec=wgc-drive-hero-goto" class="btn btn-warning">빌드 파일</a>
               </div>
             </div>
            </div>
@@ -200,6 +201,7 @@
               </div>
             </div>
           </div>
+
          <div class="col">
             <div class="card shadow-sm" width="100%">
               <img src="/images/Figma.webp" class="card-img-top" alt="figma">
