--- a/pages/4.DevelopPage.html
+++ b/pages/4.DevelopPage.html
@@ -163,7 +163,7 @@
               <img src="/images/Develop/Defence.png" class="card-img-top" alt="For the Hallownest2">
               <div class="card-body">
                 <h5 class="card-title" style="text-align:center">Level Concept</h5>
-                <p class="card-text" style="text-align:left"></p>MBC아카데미에서 배운 디팬스 게임입니다.</p>
+                <p class="card-text" style="text-align:left"></p>개발 기관에서 제작한 게임입니다.</p>
                 <a href="https://github.com/YongJinKing/DefenceGameInMBC" class="btn btn-info" style="float:center;">깃허브 주소</a>
                 <!-- <p class="card-text" style="text-align:left"></p>MBC아카데미에서 디팬스 게임을 개발하면서 배운 부분입니다.</p>
                 <a href="/contents/DataTable/Concept/For the Hallownest Game Board Resource.pdf" class="btn btn-outline-dark" style="float:center;">게임 보드 리소스 데이터 테이블</a> -->
