--- a/pages/Pexplorer/PexplorerPage.html
+++ b/pages/Pexplorer/PexplorerPage.html
@@ -165,11 +165,11 @@
               <div class="card-body">
                 <h5 class="card-title" style="text-align:center">데이터 및 일정 관리</h5>
                 <p class="card-text" style="text-align:left"></p>데이터 테이블 모음 링크입니다.</p>
-                <a href="https://drive.google.com/drive/folders/1Hy5D2mZOMGLQ52kfDfKOtHiQtYLGc1_g?dmr=1&ec=wgc-drive-hero-goto" class="btn btn-info" style="float:center;">JiraLink</a>
+                <a href="https://drive.google.com/drive/folders/1Hy5D2mZOMGLQ52kfDfKOtHiQtYLGc1_g?dmr=1&ec=wgc-drive-hero-goto" class="btn btn-info" style="float:center;">DataTable</a>
                 <p class="card-text" style="text-align:left"></p>Jira초대 링크 입니다. 확인 불가시 아래 이미지확인 부탁드립니다.</p>
-                <a href="https://id.atlassian.com/invite/p/jira-software?id=xsPNz8Z3TuScmiYo9Yunkw" class="btn btn-info" style="float:center;">JiraImage</a>
+                <a href="https://id.atlassian.com/invite/p/jira-software?id=xsPNz8Z3TuScmiYo9Yunkw" class="btn btn-info" style="float:center;">JiraLink</a>
                 <p class="card-text" style="text-align:left"></p>Jira로 구성한 간략한 일정표입니다.</p>
-                <a href="/contents/Pexplorer/지라일정.PNG" class="btn btn-info" style="float:center;">DataTable</a>
+                <a href="/contents/Pexplorer/지라일정.PNG" class="btn btn-info" style="float:center;">JiraImage</a>
                 
                 
               </div>
