--- a/pages/1. mainpage.html
+++ b/pages/1. mainpage.html
@@ -135,6 +135,8 @@
           <p class="lead text-muted">아래 제가 지금까지 작업한 자료들을 보실 수 있습니다.</p>
           <p>
             <a href="https://github.com/YongJinKing" class="btn btn-primary my-2">Github</a>
+            <a href="https://youtube.com/playlist?list=PLeGQfTMh92dm9W1veVEVdBo69xnCgj5YA&si=NltEfq8a3OxN5f2j" class="btn btn-warning my-2">게임 플레이</a>
+            
           </p>
         </div>
       </div>
