--- a/pages/4.DevelopPage.html
+++ b/pages/4.DevelopPage.html
@@ -151,8 +151,8 @@
                 <h5 class="card-title" style="text-align:center">KitchenKhaos</h5>
                 <p class="card-text" style="text-align:left"></p>KitchenKhaos를 리팩토링한 부분입니다.</p>
                 <a href="https://github.com/YongJinKing/OverCookClone" class="btn btn-info" style="float:center;">깃허브 주소</a>
-                <p class="card-text" style="text-align:left"></p>KitchenKhaos를 리팩토링한 부분과 개발하면서 배운것에 대해 간단하게 정리한 부분입니다.</p>
-                <a href="/contents/Develop/KitchenKhaos 시스템 정리.txt" class="btn btn-info" style="float:center;">깃허브 주소</a>
+                <p class="card-text" style="text-align:left"></p>KitchenKhaos를 리팩토링한 부분과 개발하면서 배운것에 대해 간단하게 정리한 부분입니다. 소리는 끄고 시청 부탁드립니다.</p>
+                <a href="https://www.youtube.com/watch?v=2y9ewzR3I_4&list=PLeGQfTMh92dl1KaYV7e3w1bmv9MAtJNkn" class="btn btn-info" style="float:center;">유튜브 영상</a>
                 
               </div>
             </div>
