--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
     </iframe>
 
     <div>
-      <a id="portfolio-link" href="/pages/mainpage.html">차용진의 포트폴리오</a>
+      <a id="portfolio-link" href="/pages/1. mainpage.html"
+        >차용진의 포트폴리오</a
+      >
     </div>
   </body>
 </html>
