--- a/pages/AnotherGameGDD.html
+++ b/pages/AnotherGameGDD.html
@@ -164,7 +164,7 @@
             <h1 class="fw-light">역기획서</h1>
             <p class="lead text-muted">다양한 게임들을 분석한 기획서</p>
             <p>
-              <a href="/pages/mainpage.html" class="btn btn-outline-dark my-2"
+              <a href="/pages/1. mainpage.html" class="btn btn-outline-dark my-2"
                 >메인 페이지</a
               >
             </p>
@@ -264,7 +264,7 @@
     <footer class="text-muted py-5">
       <div class="container">
         <p class="float-end mb-1">
-          <a href="/pages/mainpage.html">돌아가기</a>
+          <a href="/pages/1. mainpage.html">돌아가기</a>
         </p>
         <!-- <p class="mb-1">자신이 공부하는 분야와 기획포지션에 대해서 적으세요.</p>
       <p class="mb-0">자신이 공부한 것을 입증할 수 있는 학교, 학원 등을 링크하세요. <a href="https://atentsgame.com">아텐츠게임아카데미</a> </p> -->
